--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "lodash": "^4.17.4",
     "moment": "^2.17.1",
     "pretty-error": "^2.0.2",
+    "prop-types": "^15.5.10",
     "pug": "^2.0.0-beta11",
     "query-string": "^4.3.1",
     "rc-calendar": "^7.6.5",
