--- a/package.json
+++ b/package.json
@@ -92,6 +92,7 @@
     "react-datepicker": "^0.41.1",
     "react-dom": "^15.4.1",
     "react-helmet": "^3.3.1",
+    "react-infinite-scroller": "^1.0.12",
     "react-input-range": "^1.0.2",
     "react-modal": "^1.6.5",
     "react-paginate": "^4.1.1",
