--- a/package.json
+++ b/package.json
@@ -105,6 +105,7 @@
     "react-tooltip": "^3.2.3",
     "redux": "^3.6.0",
     "redux-form": "^6.4.3",
+    "redux-infinite-scroll": "^1.0.9",
     "redux-logger": "^2.7.4",
     "redux-thunk": "^2.1.0",
     "reselect": "^2.5.4",
