--- a/package.json
+++ b/package.json
@@ -54,6 +54,8 @@
     "preload-webpack-plugin": "^1.1.0",
     "promise": "7.1.1",
     "react-dev-utils": "^0.4.2",
+    "react-infinite-scroll-component": "^2.3.0",
+    "react-infinite-scroller": "^1.0.12",
     "recursive-readdir": "2.1.0",
     "strip-ansi": "3.0.1",
     "strip-loader": "^0.1.2",
@@ -92,7 +94,7 @@
     "react-datepicker": "^0.41.1",
     "react-dom": "^15.4.1",
     "react-helmet": "^3.3.1",
-    "react-infinite-scroller": "^1.0.12",
+    "react-infinite-scroll-es2015": "^1.0.0",
     "react-input-range": "^1.0.2",
     "react-modal": "^1.6.5",
     "react-paginate": "^4.1.1",
@@ -446,5 +448,5 @@
   "eslintConfig": {
     "extends": "react-app"
   },
-  "proxy": "http://%env%youyutouzi.com"
+  "proxy": ""
 }
