--- a/package.json
+++ b/package.json
@@ -1,9 +1,9 @@
 {
-  "name": "YouYu",
+  "name": "reactH5",
   "version": "1.4.1",
-  "description": "有娱 YouYu <。)#)))≦",
+  "description": "",
   "main": "index.js",
-  "author": "sweeetcc <sweeetcc@gmail.com>",
+  "author": "",
   "license": "MIT",
   "private": true,
   "devDependencies": {
@@ -54,8 +54,6 @@
     "preload-webpack-plugin": "^1.1.0",
     "promise": "7.1.1",
     "react-dev-utils": "^0.4.2",
-    "react-infinite-scroll-component": "^2.3.0",
-    "react-infinite-scroller": "^1.0.12",
     "recursive-readdir": "2.1.0",
     "strip-ansi": "3.0.1",
     "strip-loader": "^0.1.2",
@@ -94,7 +92,6 @@
     "react-datepicker": "^0.41.1",
     "react-dom": "^15.4.1",
     "react-helmet": "^3.3.1",
-    "react-infinite-scroll-es2015": "^1.0.0",
     "react-input-range": "^1.0.2",
     "react-modal": "^1.6.5",
     "react-paginate": "^4.1.1",
@@ -107,7 +104,6 @@
     "react-tooltip": "^3.2.3",
     "redux": "^3.6.0",
     "redux-form": "^6.4.3",
-    "redux-infinite-scroll": "^1.0.9",
     "redux-logger": "^2.7.4",
     "redux-thunk": "^2.1.0",
     "reselect": "^2.5.4",
@@ -148,7 +144,7 @@
     "start:client": {
       "command": "node config/scripts/start-client.js",
       "env": {
-        "DEBUG": "youyu:*",
+        "DEBUG": "reactH5:*",
         "NODE_ENV": "development",
         "PORT": 8801,
         "API_ENV": "prod",
@@ -158,7 +154,7 @@
     "start:client:test01": {
       "command": "node config/scripts/start-client.js",
       "env": {
-        "DEBUG": "youyu:*",
+        "DEBUG": "reactH5:*",
         "NODE_ENV": "development",
         "PORT": 8801,
         "API_ENV": "test01",
@@ -168,7 +164,7 @@
     "start:client:test02": {
       "command": "node config/scripts/start-client.js",
       "env": {
-        "DEBUG": "youyu:*",
+        "DEBUG": "reactH5:*",
         "NODE_ENV": "development",
         "PORT": 8801,
         "API_ENV": "test02",
@@ -178,7 +174,7 @@
     "start:client:test03": {
       "command": "node config/scripts/start-client.js",
       "env": {
-        "DEBUG": "youyu:*",
+        "DEBUG": "reactH5:*",
         "NODE_ENV": "development",
         "PORT": 8801,
         "API_ENV": "test03",
@@ -188,7 +184,7 @@
     "start:client:test04": {
       "command": "node config/scripts/start-client.js",
       "env": {
-        "DEBUG": "youyu:*",
+        "DEBUG": "reactH5:*",
         "NODE_ENV": "development",
         "PORT": 8801,
         "API_ENV": "test04",
@@ -198,7 +194,7 @@
     "start:client:test05": {
       "command": "node config/scripts/start-client.js",
       "env": {
-        "DEBUG": "youyu:*",
+        "DEBUG": "reactH5:*",
         "NODE_ENV": "development",
         "PORT": 8801,
         "API_ENV": "test05",
@@ -208,7 +204,7 @@
     "start:client:test06": {
       "command": "node config/scripts/start-client.js",
       "env": {
-        "DEBUG": "youyu:*",
+        "DEBUG": "reactH5:*",
         "NODE_ENV": "development",
         "PORT": 8801,
         "API_ENV": "test06",
@@ -218,7 +214,7 @@
     "start:client:test07": {
       "command": "node config/scripts/start-client.js",
       "env": {
-        "DEBUG": "youyu:*",
+        "DEBUG": "reactH5:*",
         "NODE_ENV": "development",
         "PORT": 8801,
         "API_ENV": "test07",
@@ -228,7 +224,7 @@
     "start:client:test08": {
       "command": "node config/scripts/start-client.js",
       "env": {
-        "DEBUG": "youyu:*",
+        "DEBUG": "reactH5:*",
         "NODE_ENV": "development",
         "PORT": 8801,
         "API_ENV": "test08",
@@ -238,7 +234,7 @@
     "start:client:test09": {
       "command": "node config/scripts/start-client.js",
       "env": {
-        "DEBUG": "youyu:*",
+        "DEBUG": "reactH5:*",
         "NODE_ENV": "development",
         "PORT": 8801,
         "API_ENV": "test09",
@@ -248,7 +244,7 @@
     "start:client:test10": {
       "command": "node config/scripts/start-client.js",
       "env": {
-        "DEBUG": "youyu:*",
+        "DEBUG": "reactH5:*",
         "NODE_ENV": "development",
         "PORT": 8801,
         "API_ENV": "test10",
@@ -258,7 +254,7 @@
     "start:client:test11": {
       "command": "node config/scripts/start-client.js",
       "env": {
-        "DEBUG": "youyu:*",
+        "DEBUG": "reactH5:*",
         "NODE_ENV": "development",
         "PORT": 8801,
         "API_ENV": "test11",
@@ -268,7 +264,7 @@
     "start:client:test12": {
       "command": "node config/scripts/start-client.js",
       "env": {
-        "DEBUG": "youyu:*",
+        "DEBUG": "reactH5:*",
         "NODE_ENV": "development",
         "PORT": 8801,
         "API_ENV": "test12",
@@ -278,7 +274,7 @@
     "build:client": {
       "command": "node config/scripts/build-client.js",
       "env": {
-        "DEBUG": "youyu:*",
+        "DEBUG": "reactH5:*",
         "NODE_ENV": "production",
         "API_ENV": "prod",
         "APP_ENV_RUNTIME": "client"
@@ -287,7 +283,7 @@
     "build:client:test01": {
       "command": "node config/scripts/build-client.js",
       "env": {
-        "DEBUG": "youyu:*",
+        "DEBUG": "reactH5:*",
         "NODE_ENV": "production",
         "API_ENV": "test01",
         "APP_ENV_RUNTIME": "client"
@@ -296,7 +292,7 @@
     "build:client:test02": {
       "command": "node config/scripts/build-client.js",
       "env": {
-        "DEBUG": "youyu:*",
+        "DEBUG": "reactH5:*",
         "NODE_ENV": "production",
         "API_ENV": "test02",
         "APP_ENV_RUNTIME": "client"
@@ -305,7 +301,7 @@
     "build:client:test03": {
       "command": "node config/scripts/build-client.js",
       "env": {
-        "DEBUG": "youyu:*",
+        "DEBUG": "reactH5:*",
         "NODE_ENV": "production",
         "API_ENV": "test03",
         "APP_ENV_RUNTIME": "client"
@@ -314,7 +310,7 @@
     "build:client:test04": {
       "command": "node config/scripts/build-client.js",
       "env": {
-        "DEBUG": "youyu:*",
+        "DEBUG": "reactH5:*",
         "NODE_ENV": "production",
         "API_ENV": "test04",
         "APP_ENV_RUNTIME": "client"
@@ -323,7 +319,7 @@
     "build:client:test05": {
       "command": "node config/scripts/build-client.js",
       "env": {
-        "DEBUG": "youyu:*",
+        "DEBUG": "reactH5:*",
         "NODE_ENV": "production",
         "API_ENV": "test05",
         "APP_ENV_RUNTIME": "client"
@@ -332,7 +328,7 @@
     "build:client:test06": {
       "command": "node config/scripts/build-client.js",
       "env": {
-        "DEBUG": "youyu:*",
+        "DEBUG": "reactH5:*",
         "NODE_ENV": "production",
         "API_ENV": "test06",
         "APP_ENV_RUNTIME": "client"
@@ -341,7 +337,7 @@
     "build:client:test07": {
       "command": "node config/scripts/build-client.js",
       "env": {
-        "DEBUG": "youyu:*",
+        "DEBUG": "reactH5:*",
         "NODE_ENV": "production",
         "API_ENV": "test07",
         "APP_ENV_RUNTIME": "client"
@@ -350,7 +346,7 @@
     "build:client:test08": {
       "command": "node config/scripts/build-client.js",
       "env": {
-        "DEBUG": "youyu:*",
+        "DEBUG": "reactH5:*",
         "NODE_ENV": "production",
         "API_ENV": "test08",
         "APP_ENV_RUNTIME": "client"
@@ -359,7 +355,7 @@
     "build:client:test09": {
       "command": "node config/scripts/build-client.js",
       "env": {
-        "DEBUG": "youyu:*",
+        "DEBUG": "reactH5:*",
         "NODE_ENV": "production",
         "API_ENV": "test09",
         "APP_ENV_RUNTIME": "client"
@@ -368,7 +364,7 @@
     "build:client:test10": {
       "command": "node config/scripts/build-client.js",
       "env": {
-        "DEBUG": "youyu:*",
+        "DEBUG": "reactH5:*",
         "NODE_ENV": "production",
         "API_ENV": "test10",
         "APP_ENV_RUNTIME": "client"
@@ -377,7 +373,7 @@
     "build:client:test11": {
       "command": "node config/scripts/build-client.js",
       "env": {
-        "DEBUG": "youyu:*",
+        "DEBUG": "reactH5:*",
         "NODE_ENV": "production",
         "API_ENV": "test11",
         "APP_ENV_RUNTIME": "client"
@@ -386,7 +382,7 @@
     "build:client:test12": {
       "command": "node config/scripts/build-client.js",
       "env": {
-        "DEBUG": "youyu:*",
+        "DEBUG": "reactH5:*",
         "NODE_ENV": "production",
         "API_ENV": "test12",
         "APP_ENV_RUNTIME": "client"
@@ -395,7 +391,7 @@
     "test:client": {
       "command": "node config/scripts/test-client.js --env=jsdom",
       "env": {
-        "DEBUG": "youyu:*",
+        "DEBUG": "reactH5:*",
         "NODE_ENV": "test"
       }
     }
