--- a/package.json
+++ b/package.json
@@ -54,6 +54,7 @@
     "preload-webpack-plugin": "^1.1.0",
     "promise": "7.1.1",
     "react-dev-utils": "^0.4.2",
+    "react-swipe": "^5.0.8",
     "recursive-readdir": "2.1.0",
     "strip-ansi": "3.0.1",
     "strip-loader": "^0.1.2",
@@ -61,6 +62,7 @@
     "stylelint": "^7.7.1",
     "stylelint-config-standard": "^15.0.1",
     "stylelint-webpack-plugin": "^0.5.1",
+    "swipe-js-iso": "^2.0.3",
     "url-loader": "0.5.7",
     "webpack": "1.14.0",
     "webpack-dev-server": "1.16.2",
